[gd_scene load_steps=3 format=3 uid="uid://eym67yphv6n5"]

[ext_resource type="Script" uid="uid://b54k1j87ovjc0" path="res://scripts/ui/upgrade_screen.gd" id="1_xpnye"]
[ext_resource type="Texture2D" uid="uid://j0dvpav61r68" path="res://assets/images/Salvage.png" id="2_eg2gl"]

[node name="UpgradeScreen" type="CanvasLayer"]
script = ExtResource("1_xpnye")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0392157, 0.164706, 0.0509804, 0.588235)

[node name="UpgradePanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -952.0
offset_top = -530.0
offset_right = 968.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainLayout" type="VBoxContainer" parent="UpgradePanel"]
layout_mode = 2
alignment = 1

[node name="SalvageIcon" type="TextureRect" parent="UpgradePanel/MainLayout"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
texture = ExtResource("2_eg2gl")
stretch_mode = 5

[node name="TotalSalvageLabel" type="Label" parent="UpgradePanel/MainLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "x0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonLayout" type="HBoxContainer" parent="UpgradePanel/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="SpeedButton" type="Button" parent="UpgradePanel/MainLayout/ButtonLayout"]
layout_mode = 2
tooltip_text = "Increases movement speed."
theme_override_font_sizes/font_size = 30
text = "Upgrade Speed"

[node name="DamageButton" type="Button" parent="UpgradePanel/MainLayout/ButtonLayout"]
layout_mode = 2
tooltip_text = "Increases bullet damage"
theme_override_font_sizes/font_size = 30
text = "Upgrade Damage"

[node name="HealthButton" type="Button" parent="UpgradePanel/MainLayout/ButtonLayout"]
layout_mode = 2
tooltip_text = "Increases maximum health."
theme_override_font_sizes/font_size = 30
text = "Upgrade Core"

[node name="NextWaveButton" type="Button" parent="UpgradePanel/MainLayout"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start Next Wave"
